- replace missing direct calls to Jdk dependent file write with facade usage